Adicionei um parágrafo

--- a/ExemploAula/index.html
+++ b/ExemploAula/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat hic velit saepe quos nobis ipsa. Facere quae iusto possimus necessitatibus sunt ullam at ad placeat error, eligendi quod laboriosam quo.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate minima atque facilis commodi, suscipit provident aperiam, dolore rem explicabo voluptates repudiandae. Eligendi exercitationem accusamus repudiandae alias maxime quia et ullam.</p>
 </body>
 </html>
